overview prices issues with text wrapping v10.0

--- a/src/app/prices/overview-prices/overview-prices.component.css
+++ b/src/app/prices/overview-prices/overview-prices.component.css
@@ -43,7 +43,7 @@
 }
 
 .table-with-dates-date-cell {
-  padding-right: 10px !important;
+  padding-right: 10px;
 }
 
 .table-with-prices-price-cell {
